--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-container">
                <nav>
                   <ul>
-                     <li><a class="selected" href="index.html">Home</a></li>
+                     <li><a href="index.html" class="location">Home</a></li>
                      <li><a href="mason.html">Mason</a></li>
                      <li><a href="norwood.html">Norwood</a></li>
                      <li><a href="catering.html">Catering</a></li>
