modified:   hours.html 	modified:   images/.DS_Store 	new file:   images/chicken-sandwich-img.png 	new file:   images/fish-and-chips-img.png 	new file:   images/hand-melt-img.png 	new file:   images/store-front-img-01.png 	new file:   images/store-front-img-02.png 	modified:   index.html 	modified:   main.css 	modified:   mason.html 	modified:   norwood.html

--- a/hours.html
+++ b/hours.html
@@ -50,11 +50,17 @@
             <h2>Mason Location</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d98845.88367014356!2d-84.44841041108778!3d39.26706714496737!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88405832d50b9703%3A0xa00ae7e4c52e3bcb!2sQuatman%20Caf%C3%A9!5e0!3m2!1sen!2sus!4v1681184537164!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
+         
 
          <div>
             <h2>Norwood Location</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98845.82452941734!2d-84.44841034816608!3d39.26710907702875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8841b2a40c9902fb%3A0x3834679408cc3554!2sQuatman%20Cafe!5e0!3m2!1sen!2sus!4v1681184557195!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
+      </div>
+      <div class="storefront">
+         <img src="images/store-front-img-02.png" alt="Mason Store">
+         <img src="images/store-front-img-01.png" alt="Norwood Store">
+
       </div>
 
 <footer>            
