--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>Our Story</h2>
             <p>Quatman Cafe was founded in 1966 by Albert (Albo) Imm and Ken Talmage. Quatman Cafe has become a Cincinnati Icon know for cheeseburgers, chili, homemade soups, and the coldest beer in town.</p>
             <p>We've won several awards for Best Cheeseburger in Cincinnati and have been featured in Cincinnati Magazine, The Cincinnati Enquirer, CityBeat, aol.com, and many other publications.</p>
-            <p>Quatman Cafe is a friendly family-oriented restaurant. We offer a deli with local and national brands. <a href="/catering/">Catering</a> is also available.</p>
+            <p>Quatman Cafe is a friendly family-oriented restaurant. We offer a deli with local and national brands. <a href="/catering.html">Catering</a> is also available.</p>
             <p>We remain a family owned and operated restaurant commited to providing quality food in great locations at an affordable price.</p>
          </div>
       </div>
