--- a/mason.html
+++ b/mason.html
@@ -67,8 +67,13 @@
                      <li>513-229-0222</li>
                      <li>224 West Main Street</li>
                      <li>Mason, Ohio 45040</li>
-                     <li>Driving Directions</li>
+                     <li><a href="hours.html">Driving Directions</a></li>
                   </ul>
+               </div>
+               <div class="food">
+                  <img src="/images/chicken-sandwich-img.png" alt="grilled chicken sandwich with fries">
+                  <img src="/images/fish-and-chips-img.png" alt="fish and chips dish">
+                  <img src="/images/hand-melt-img.png" alt="ham and cheese melt sandwich">
                </div>
          </div>
          <div class="body-content">
@@ -83,27 +88,27 @@
                   <li>Phone: 513-229-0222</li>
                </div>
                
-               <div>We are a DORA! (Designated Outdoor Refreshment Area)</div>
+               <div><p>We are a DORA! (Designated Outdoor Refreshment Area)</p></div>
                
                <div>
                   <h2>Our Menu - Carry out available</h2>
-                  <h4>Homemade Soups</h4>
+                  <h3>Homemade Soups</h3>
                   <li>Chili$4.50</li>
                   <li>Homemade Bean & Ham Soup$3.75</li>
                   <li>Homemade Vegetable Soup$3.50</li>
                   <li>Our Famous Mock Turtle Soup$3.75</li>
                   <li>All Soups To Go: Add $0.50</li>
-                  <h4>Starters</h4>
+                  <h3>Starters</h3>
                   <li>Pepperoni & Mixed Cheese Plate$9.00</li>
                   <li>Chili Cheese Nachos loaded with lettuce, tomato, jalapenos, and sour cream$9.00</li>
-                  <h4>Deli Sandwiches</h4>
+                  <h3>Deli Sandwiches</h3>
                   <li>Ham$7.00</li>
                   <li>Turkey$7.00</li>
                   <li>Corned Beef$9.25</li>
                   <li>Chicken Salad$7.00</li>
                   <li>Ham Salad$7.00</li>
                   <li>BLT$8.50</li>
-                  <h4>From The Grill</h4>
+                  <h3>From The Grill</h3>
                   <li>Served with your choice of Lettuce, Tomato, Onion, and Pickle as well as Potato Chips or French Fries</li>
                   <li>(add $2.50)</li>
                   <li>Hamburger*$6.50</li>
