--- a/norwood.html
+++ b/norwood.html
@@ -70,6 +70,11 @@
                      <li>Driving Directions</li>
                   </ul>
                </div>
+               <div class="food">
+                  <img src="/images/chicken-sandwich-img.png" alt="grilled chicken sandwich with fries">
+                  <img src="/images/fish-and-chips-img.png" alt="fish and chips dish">
+                  <img src="/images/hand-melt-img.png" alt="ham and cheese melt sandwich">
+               </div>
          </div>
          <div class="body-content">
             <div class="story">
@@ -86,23 +91,23 @@
                
                <div>
                   <h2>Our Menu - Carry out available</h2>
-                  <li>Homemade Soups</li>
+                  <h3>Homemade Soups</h3>
                   <li>Chili$4.50</li>
                   <li>Homemade Bean & Ham Soup$3.75</li>
                   <li>Homemade Vegetable Soup$3.50</li>
                   <li>Our Famous Mock Turtle Soup$3.75</li>
                   <li>All Soups To Go: Add $0.50</li>
-                  <li>Starters</li>
+                  <h3>Starters</h3>
                   <li>Pepperoni & Mixed Cheese Plate$9.00</li>
                   <li>Chili Cheese Nachos loaded with lettuce, tomato, jalapenos, and sour cream$9.00</li>
-                  <li>Deli Sandwiches</li>
+                  <h3>Deli Sandwiches</h3>
                   <li>Ham$7.00</li>
                   <li>Turkey$7.00</li>
                   <li>Corned Beef$9.25</li>
                   <li>Chicken Salad$7.00</li>
                   <li>Ham Salad$7.00</li>
                   <li>BLT$8.50</li>
-                  <li>From The Grill</li>
+                  <h3>From The Grill</h3>
                   <li>Served with your choice of Lettuce, Tomato, Onion, and Pickle as well as Potato Chips or French Fries</li>
                   <li>(add $2.50)</li>
                   <li>Hamburger*$6.50</li>
