modified:   catering.html 	modified:   hours.html 	modified:   index.html 	modified:   main.css 	modified:   mason.html 	modified:   norwood.html

--- a/hours.html
+++ b/hours.html
@@ -64,9 +64,8 @@
       </div>
 
 <footer>            
-   <p>all rights reserved by Quatman Cafe</p>
+   <p>All rights reserved by Quatman Cafe</p>
 </div>
-
 
 </footer>
   
