--- a/mason.html
+++ b/mason.html
@@ -187,9 +187,11 @@
          </li>
       </ul>
 <span></span>
-   <p>all rights reserved by Quatman Cafe</p>
+   <p>All rights reserved by Quatman Cafe</p>
 </div>
-
+<div class="desktop-footer">
+   <p>All rights reserved by Quatman Cafe</p>
+</div>
 
 </footer>
   
