--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
          </li>
       </ul>
 <span></span>
-   <p>all rights reserved by Quatman Cafe</p>
+   <p>All rights reserved by Quatman Cafe</p>
+</div>
+<div class="desktop-footer">
+   <p>All rights reserved by Quatman Cafe</p>
 </div>
 
 
