modified:   catering.html 	modified:   hours.html 	modified:   index.html 	modified:   main.css 	modified:   mason.html 	modified:   norwood.html

--- a/catering.html
+++ b/catering.html
@@ -23,8 +23,8 @@
                      <li><a href="mason.html">Mason</a></li>
                      <li><a href="norwood.html">Norwood</a></li>
                      <li><a href="catering.html" class="location">Catering</a></li>
-                     <li><a href="https://quatman-cafe.square.site/">Order Online</a></li>
-                     <li><a href="hours.html">Hours</a></li>
+                     <li><a href="https://quatman-cafe.square.site/" target="_blank">Order Online</a></li>
+                     <li><a href="hours.html">Locations</a></li>
                   </ul>
                </nav>
                </div>
@@ -119,9 +119,7 @@
 <span></span>
    <p>All rights reserved by Quatman Cafe</p>
 </div>
-<div class="desktop-footer">
-   <p>All rights reserved by Quatman Cafe</p>
-</div>
+
 
 </footer>
   
